# frameforge

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.mjs
app/: DemoMakerBootstrap.jsx  RecorderBootstrap.jsx  globals.css  layout.jsx  page.jsx
app/demo-maker/: page.jsx
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: desktop-architecture.md  recording-troubleshooting.md
extension/: README.md  background.js  content-recorder.js  content-source.js  manifest.json  popup.html  popup.js
src/: demo-bridge.mjs  demo-engine.mjs  demo-maker-runtime.mjs  demo-recorder-runtime.mjs  desktop-demo-bridge.mjs  main.js  recorder-runtime.mjs  recorder-utils.mjs  styles.css
tests/: demo-engine.test.mjs  recorder-utils.test.mjs
