[package]
name = "frameforge-desktop"
version = "0.1.0"
description = "Frameforge desktop shell"
authors = ["Frameforge"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = [ "macos-private-api", "window-all"] }
rdev = "0.5"

[features]
default = []
