[package]
name = "frameforge-desktop"
version = "0.1.0"
description = "Frameforge desktop shell"
authors = ["Frameforge"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
base64 = "0.22"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = [ "macos-private-api", "window-all"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
